--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
      - uses: actions/checkout@v-2
 
      - name: Setup Node.js environment
-       uses: actions/setup-node@v2.1.2
+       uses: actions/setup-node@v1.4.2
   
  with:
     # Set always-auth in npmrc
@@ -38,7 +38,9 @@ jobs:
     # Used to pull node distributions from node-versions.  Since there's a default, this is typically not supplied by the user.
     token: # optional, default is ${{ github.token }}
     # Deprecated. Use node-version instead. Will not be supported after October 1, 2019
-    version: # 12
+
+    version: 12
+    
     - name: GitHub Action for Yarn
   # You may pin to the exact commit or the version.
   # uses: Borales/actions-yarn@4965e1a0f0ae9c422a9a5748ebd1fb5e097d22b9
