--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-     - uses: actions/checkout@v.2
+     - uses: actions/checkout@v2
 
      - name: Setup Node.js environment
        uses: actions/setup-node@v1.4.2
@@ -34,7 +34,7 @@ jobs:
   uses: Borales/actions-yarn@v2.3.0
   with:
     # Yarn command
-     cmd: install #npm install / yarn install
+      cmd: yarn install     #npm install / yarn install
     
        - name: creating build
           run: yarn build # or npm build
