--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
   
        with:
 
-       version: 12
+       node-version: 12
     
      - name: GitHub Action for Yarn
   # You may pin to the exact commit or the version.
